<resources>
    <string name="app_name">Wizard Punkte</string>
    <string name="b_newgame">New Game</string>
    <string name="b_loadgame">Load Game</string>
    <string name="t_player">Number Players</string>
    <string name="StartGame">Start Game</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_5">Player 5</string>
    <string name="player_6">Player 6</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="erster_geber">First giver</string>

    <string name="gemacht">total made</string>
    <string name="angesagt">total hip</string>
    <string name="copyright" translatable="false">© Michael Wallner</string>
    <string name="version" translatable="false">"Version "</string>
    <string name="player_1">Player 1</string>
    <string name="dummy1" translatable="false">Dummy1</string>
    <string name="punkte">points</string>
    <string name="game">Game</string>
    <string name="del_game">press long to delete</string>
    <string name="super_cooles_bild_fehlt" translatable="false">Super cooles Bild fehlt</string>
    <string name="default_points" translatable="false">20</string>
    <string name="project_on_github" translatable="false">Project on Github</string>
    <string name="report_bug_feature" translatable="false">Report Bug / Feature</string>
    <string name="dealer">Dealer</string>
    <string name="Scoreboard" translatable="false">Scoreboard</string>
    <string name="round_x">round %d</string>
    <string name="end_game">Game completed</string>
    <string name="round_ended">Round %d completed</string>
    <string name="prev_round_not_ended">previous round not finished!</string>
    <string name="first_giver_is">%s is the first giver!</string>
    <string name="git_link" translatable="false">https://github.com/wallmi/WPT</string>
    <string name="round_finished">Round %d is already finished!</string>
    <string name="game_deleted">Game %s deleted</string>
    <string name="report_bug" translatable="false">mailto:wpt@wallner-michael.at?subject=Wizard%20Point%20Table</string>
    <string name="valueSelector_label" translatable="false">VALUE</string>
    <string name="valueBarLabel" translatable="false">CURRENT VALUE</string>
</resources>
