<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.wallner.michael.wpt.MainActivity"
    tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:onClick="startNewGame"
                    android:text="@string/b_newgame"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="loadGame"
                    android:text="@string/b_loadgame"
                    app:layout_constraintTop_toBottomOf="@+id/button5" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/super_cooles_bild_fehlt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Github"
            android:text="@string/project_on_github"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            tools:layout_editor_absoluteX="151dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:onClick="reportIssue"
            android:text="@string/report_bug_feature"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="151dp" />

</android.support.constraint.ConstraintLayout>
