<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/angesagt"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/all_hip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="15dp"
                    android:textAlignment="textEnd"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gemacht"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/all_done"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="15dp"
                    android:textAlignment="textEnd"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="0" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/punkte"
            android:textAlignment="textEnd"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/p1_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/dummy1"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/p1_dealer"
            android:layout_width="20sp"
            android:layout_height="match_parent"
            android:src="@android:drawable/presence_online"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/p1_hip"
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <SeekBar
                android:id="@+id/p1_done"
                android:layout_width="match_parent"
                android:layout_height="32dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/p1_points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:text="@string/default_points"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1">

        <TextView
            android:id="@+id/p2_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/dummy1"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/p2_dealer"
            android:layout_width="20sp"
            android:layout_height="match_parent"
            android:src="@android:drawable/presence_online"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/p2_hip"
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <SeekBar
                android:id="@+id/p2_done"
                android:layout_width="match_parent"
                android:layout_height="32dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/p2_points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:text="@string/default_points"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2">

        <TextView
            android:id="@+id/p3_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/dummy1"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/p3_dealer"
            android:layout_width="20sp"
            android:layout_height="match_parent"
            android:src="@android:drawable/presence_online"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/p3_hip"
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <SeekBar
                android:id="@+id/p3_done"
                android:layout_width="match_parent"
                android:layout_height="32dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/p3_points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:text="@string/default_points"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p3">

        <TextView
            android:id="@+id/p4_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/dummy1"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/p4_dealer"
            android:layout_width="20sp"
            android:layout_height="match_parent"
            android:src="@android:drawable/presence_online"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/p4_hip"
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <SeekBar
                android:id="@+id/p4_done"
                android:layout_width="match_parent"
                android:layout_height="32dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/p4_points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:text="@string/default_points"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p4">

        <TextView
            android:id="@+id/p5_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/dummy1"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/p5_dealer"
            android:layout_width="20sp"
            android:layout_height="match_parent"
            android:src="@android:drawable/presence_online"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/p5_hip"
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <SeekBar
                android:id="@+id/p5_done"
                android:layout_width="match_parent"
                android:layout_height="32dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/p5_points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:text="@string/default_points"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p5">

        <TextView
            android:id="@+id/p6_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/dummy1"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/p6_dealer"
            android:layout_width="20sp"
            android:layout_height="match_parent"
            android:src="@android:drawable/presence_online"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/p6_hip"
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <SeekBar
                android:id="@+id/p6_done"
                android:layout_width="match_parent"
                android:layout_height="32dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/p6_points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:text="@string/default_points"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>